# scrabble-1d

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
config/: dictionary.txt  game_settings.cfg  game_settings.json  settings.json
data/: Makefile.am  default_dictionary.txt
json/: settings.json  trie.json
libs/: Makefile.am  file_checks.c  file_checks.h  file_contents_to_string.h  file_paths.h  jRead.c  jRead.h  jWrite.h  trie.c  trie.h
libs/dict_handling/: Makefile.am  dict_handling.c  dict_handling.h
libs/ui_util/: Makefile.am  ui_util.c  ui_util.h
src/: Makefile  Makefile.am  a.out  dict_handling.c  game_logic.c  game_logic.h  game_settings.c  game_settings.h  jRead.c  jRead.h  jWrite.c  main  main.c  trie.h
src/add_new_word/: Makefile.am  add_new_word.c  add_new_word.h
src/dictionary_handling/: add_word_to_dict.h  dict_to_trie.h  dictionary.csv  dictionary.txt  file_contents_to_string.h  trie_handling.h  trie_to_json.h
src/dictionary_to_trie/: dictionary.csv  trie_generation.h
src/game_logic/: Makefile.am  game_logic.c  game_logic.h  game_logic.h.gch  saving.txt
src/game_settings/: Makefile.am  game_settings.c  game_settings.h  num_of_let_and_rounds.txt
src/ui/: exit_app.h  exit_element.h  message_box.h
